Agregando pie de pagina y redes sociales

--- a/Parte1-Conocimientos-Tecnicos/Desarrollo-FrontEnd/index.html
+++ b/Parte1-Conocimientos-Tecnicos/Desarrollo-FrontEnd/index.html
@@ -27,7 +27,7 @@
         <i class="fa-solid fa-bars-staggered" id="bars-Menu"></i>
     </header>
 
-
+    <!-- secccion principal -->
     <section class="hero">
 
         <div class="hero-image">
@@ -46,6 +46,24 @@
         </div>
 
     </section>
+
+
+    <!-- Pie de página y redes sociales -->
+    <footer>
+
+        <a href="" class="logo">
+            <img src="./img/logo.png" alt="">
+        </a>
+
+        <p>Realizado por Grace Silva</p>
+
+        <div class="social-media">
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-github"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+        </div>
+
+    </footer>
 
 
 </body>
