--- a/Parte1-Conocimientos-Tecnicos/Desarrollo-FrontEnd/index.html
+++ b/Parte1-Conocimientos-Tecnicos/Desarrollo-FrontEnd/index.html
@@ -58,8 +58,8 @@
         <p>Realizado por Grace Silva</p>
 
         <div class="social-media">
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            <a href=""><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/grace-silva-duarte-549437270/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/Grace-Silva"><i class="fa-brands fa-github"></i></a>
             <a href=""><i class="fa-brands fa-youtube"></i></a>
         </div>
 
